Fix spacing in interview

--- a/frontend/src/styles/CensorshipPage.module.css
+++ b/frontend/src/styles/CensorshipPage.module.css
@@ -624,5 +624,9 @@
     border-bottom: none;
     width: 70%;
     margin: 2em auto;
+
+    + .h1Spacer {
+      height: 0;
+    }
   }
 }
